# sandbox

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
cmake/: Findk4a.cmake
include/: k4a_helper.hpp  pipe_helper.hpp
scripts/: test_linux.py
src/: CMakeLists.txt  k4a_helper.cpp  k4a_helper.hpp  main.cpp  pipe_helper.cpp
